Update vercel.json routing configuration

--- a/TheMuster/vercel.json
+++ b/TheMuster/vercel.json
@@ -1,17 +1,8 @@
 {
 "version": 2,
-"builds": [
-{
-"src": "index.html",
-"use": "@vercel/static-build",
-"config": {
-"distDir": "."
-}
-}
-],
 "routes": [
 {
-"src": "/.*",
+"src": "/(.*)",
 "dest": "/index.html"
 }
 ]
